--- a/vaccine-book-app/package.json
+++ b/vaccine-book-app/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "cypress": "cypress open",
+    "e2e": "start-server-and-test dev 3000 cypress"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -16,8 +18,6 @@
     "@mui/material": "^5.14.9",
     "@mui/x-date-pickers": "^6.13.0",
     "@reduxjs/toolkit": "^1.9.7",
-    "@types/node": "20.5.4",
-    "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "dayjs": "^1.11.9",
     "mongoose": "^8.0.1",
@@ -33,10 +33,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "@types/node": "20.5.4",
+    "@types/react": "18.2.21",
     "autoprefixer": "^10.4.15",
+    "cypress": "^13.5.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.29",
+    "start-server-and-test": "^2.0.3",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1"
   }
